re PR tree-optimization/36922 (ICE in tree-data-ref.c with -ftree-loop-linear)

PR tree-optimization/36922
	* tree-data-ref.c (initialize_matrix_A): Handle BIT_NOT_EXPR.
	* tree-scalar-evolution.c (interpret_rhs_expr, instantiate_scev_1):
	Likewise.

	* gfortran.dg/pr36922.f: New test.

From-SVN: r144250